# GFDL-generic-tracers

./: .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  GFDLGTracers.pc.in  fortitude.toml
.github/build-ci/data/: standard.json
.github/build-ci/manifests/: gcc-no-use_access_fms.spack.yaml.j2  gcc-use_access_fms.spack.yaml.j2  intel-no-use_access_fms.spack.yaml.j2  intel-use_access_fms.spack.yaml.j2  oneapi-no-use_access_fms.spack.yaml.j2  oneapi-use_access_fms.spack.yaml.j2
.github/workflows/: build.yml  check_links.yml  ci.yml  test.yml
cmake/: GFDLGTracersConfig.cmake.in
documentation/: .mkdocs.yml.un~  mkdocs.yml  references.bib
documentation/docs/pages/: .index.md.un~  WOMBATlite_update_from_source.md  WOMBATmid_update_from_bottom.md  WOMBATmid_update_from_source.md  index.md
documentation/docs/pages/Model_description/: WOMBATlite_model_description.md  WOMBATmid_model_description.md
generic_tracers/: MOM_generic_tracer.F90  generic_WOMBATlite.F90  generic_WOMBATmid.F90  generic_tracer.F90  generic_tracer_utils.F90
